--- a/ceedbanalyze-ui/package.json
+++ b/ceedbanalyze-ui/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.7.3",
+    "ceedbanalyze-ui": "file:",
     "element-plus": "^2.7.7",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
