--- a/ceedbanalyze/src/main/resources/application.yml
+++ b/ceedbanalyze/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name=ceedbanalyze
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/big_event
+    url: jdbc:mysql://localhost:3306/gaokao
     username: root
     password: 123456
   data:
@@ -14,3 +14,7 @@ spring:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true   #??????????????
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+server:
+  port: 8080
