--- a/ceedbanalyze/src/main/resources/application.yml
+++ b/ceedbanalyze/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name=ceedbanalyze
+    name: ceedbanalyze
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/gaokao
