--- a/ceedbanalyze/pom.xml
+++ b/ceedbanalyze/pom.xml
@@ -31,6 +31,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<maven.test.skip>true</maven.test.skip>
 	</properties>
 	<dependencies>
 
