--- a/ceedbanalyze-ui/package.json
+++ b/ceedbanalyze-ui/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.4",
     "ceedbanalyze-ui": "file:",
     "element-plus": "^2.7.7",
+    "mitt": "^3.0.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0"
