--- a/ceedbanalyze-ui/package.json
+++ b/ceedbanalyze-ui/package.json
@@ -13,13 +13,18 @@
     "axios": "^1.7.4",
     "ceedbanalyze-ui": "file:",
     "element-plus": "^2.7.7",
+    "lib-flexible": "^0.3.2",
+    "lib-flexible-computer": "^1.0.2",
     "mitt": "^3.0.1",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^4.0.0",
+    "postcss-px2rem-exclude": "^0.0.6",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "px2rem-loader": "^0.1.9",
     "unplugin-auto-import": "^0.18.2",
     "unplugin-vue-components": "^0.27.3",
     "vite": "^5.3.1"
