--- a/ceedbanalyze/pom.xml
+++ b/ceedbanalyze/pom.xml
@@ -83,6 +83,11 @@
 			<artifactId>pagehelper</artifactId>
 			<version>5.2.1</version>
 		</dependency>
+		<dependency>
+    		<groupId>com.alibaba</groupId>
+    		<artifactId>dashscope-sdk-java</artifactId>
+    		<version>2.15.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
