--- a/ceedbanalyze-ui/package.json
+++ b/ceedbanalyze-ui/package.json
@@ -15,6 +15,7 @@
     "element-plus": "^2.7.7",
     "lib-flexible": "^0.3.2",
     "lib-flexible-computer": "^1.0.2",
+    "marked": "^14.1.1",
     "mitt": "^3.0.1",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^4.0.0",
